# ZeroVault

./: Cargo.toml  README.md  myfile2.txt  myfile3.txt
src/: crypto.rs  main.rs
