[package]
name = "zerovault"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ZeroVault — zero-knowledge encrypted storage. Encrypt first, store anywhere."

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
aes-gcm = { version = "0.10", features = ["aes"] }
argon2 = "0.5"
zeroize = "1"
rpassword = "7"
anyhow = "1"